# kinect2_drive

./: CMakeLists.txt  README
cmake_modules/: FindGLFW3.cmake  FindGLFW3.cmake~  FindOpenNI2.cmake~
src/: CMakeLists.txt~  Protonect.cpp  Protonect2.cpp  Protonect_original.cpp  openni2_drive.cpp  openni2_drive2.cpp
